/*
 * Copyright 2017 XLAB d.o.o.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 *
 */

syntax = "proto3";

package pb;

service CA {
    rpc GenerateCertificate(stream CARequest) returns (stream CAResponse) {}
}

message CARequest {
    oneof type {
        SchnorrProofRandData proofRandData = 1;
        SchnorrProofData proofData = 2;
    }
}

message CAResponse {
    oneof type {
        bytes challenge = 1;
        Cert cert = 2;
    }
}

message SchnorrProofRandData {
    bytes X = 1;
    bytes A = 2;
    bytes B = 3;
}

message SchnorrProofData {
    bytes Z = 1;
}

message Cert {
    bytes BlindedA = 1;
    bytes BlindedB = 2;
    bytes R = 3;
    bytes S = 4;
}

/*
service Organization {
    rpc GenerateNym (stream Message) returns (stream Message) {}
    rpc ObtainCredential (stream Message) returns (stream Message) {}
    rpc TransferCredential (stream Message) returns (stream Message) {}
}*/